@@ -5,10 +5,7 @@
 ### vector that gives the order of leaves in the plotted
 ### dendrogram. The 'height's are only sorted spantree segment
 ### distances, but for 'merge' we need to establish cluster
-### memberships, and for 'order' we must traverse the tree. The
-### plot.hclust() function seems to require that the left kid is
-### always more compact (a single point or fused earlier than the
-### right kid).
+### memberships, and for 'order' we must traverse the tree.
 
 `as.hclust.spantree` <-
     function(x, ...)
@@ -27,16 +24,11 @@
     merge <- matrix(0, nrow=npoints-1, ncol=2)
     for(i in 1:nrow(merge)) {
         ## add items of labs, keep tighter cluster on the left
-        items <- c(labs[dad[i]], labs[kid[i]])
-        if (items[1] > 0 || items[2] > 0)
-            items <- sort(items)
-        else
-            items <- rev(sort(items))
-        merge[i, ] <- items
+        merge[i, ] <- c(labs[dad[i]], labs[kid[i]])
         ## update labs for the current group and its kids
         labs[labs %in% labs[c(dad[i], kid[i])]] <- i
     }
-    ## Get order of leaves with recursive search from the root
+    ## Get order of leaves with recursive search from the root.
     visited <- matrix(FALSE, nrow = nrow(merge), ncol=ncol(merge))
     order <- numeric(npoints)
     ind <- 0
@@ -66,4 +58,99 @@
                 match.call())
     class(out) <- "hclust"
     out
+}
+
+### Internal vegan function to get the 'order' from a merge matrix of
+### an hclust tree
+
+`hclustMergeOrder` <-
+    function(merge)
+{
+    ## Get order of leaves with recursive search from the root
+    visited <- matrix(FALSE, nrow = nrow(merge), ncol=ncol(merge))
+    order <- numeric(nrow(merge)+1)
+    ind <- 0
+    ## "<<-" updates data only within this function, but outside the
+    ## visit() function.
+    visit <- function(i, j) {
+        if(visited[i,j])
+            return(NULL)
+        else {
+            visited[i,j] <<- TRUE
+        }
+        if (merge[i,j] < 0) {
+            ind <<- ind+1
+            order[ind] <<- -merge[i,j]
+            if (j == 1)
+                visit(i, 2)
+        } else {
+            visit(merge[i,j], 1)
+            visit(merge[i,j], 2)
+        }
+    }
+    visit(nrow(merge), 1)
+    visit(nrow(merge), 2)
+    return(order)
+}
+
+### Reorder an hclust tree. Basic R provides reorder.dendrogram, but
+### this functoin works with 'hclust' objects, and also differs in
+### implementation. We use either weighted mean, min or max or
+### sum. The dendrogram is always ordered in ascending order, so that
+### with max the left kid always has lower value. So with 'max' the
+### largest value is smaller in leftmost group. The choice 'sum'
+### hardly makes sense, but it is the default in
+### reorder.dendrogram. The ordering with 'mean' differs from
+### reorder.dendrogram which uses unweighted means, but here we weight
+### means by group sizes so that the mean of an internal node is the
+### mean of its leaves.
+
+`reorder.hclust` <-
+    function(x, wts, agglo.FUN = c("mean", "min", "max", "sum"), ...)
+{
+    agglo.FUN <- match.arg(agglo.FUN)
+    merge <- x$merge
+    nlev <- nrow(merge)
+    stats <- numeric(nlev)
+    counts <- numeric(nlev)
+    pair <- numeric(2)
+    pairw <- numeric(2)
+    ## Go through merge, order each level and update the statistic.
+    for(i in 1:nlev) {
+        for(j in 1:2) {
+            if (merge[i,j] < 0) {
+                pair[j] <- wts[-merge[i,j]]
+                pairw[j] <- 1
+            } else {
+                pair[j] <- stats[merge[i,j]]
+                pairw[j] <- counts[merge[i,j]]
+            }
+        }
+        ## reorder
+        merge[i,] <- merge[i, order(pair)]
+        ## statistic for this merge level
+        stats[i] <-
+            switch(agglo.FUN,
+                   "mean" = weighted.mean(pair, pairw),
+                   "min" = min(pair),
+                   "max" = max(pair),
+                   "sum" = sum(pair))
+        counts[i] <- sum(pairw)
+    }
+    ## Get the 'order' of the reordered dendrogram
+    order <- hclustMergeOrder(merge)
+    x$merge <- merge
+    x$order <- order
+    x$value <- stats
+    x
+}
+
+### Trivial function to reverse the order of an hclust tree (why this
+### is not in base R?)
+
+`rev.hclust` <-
+    function(x)
+{
+    x$order <- rev(x$order)
+    x
 }
