@@ -14,6 +14,15 @@ Version 2.1-41 (opened December 12, 2013)
 	* as.hclust.spantree: a new function to cast a "spantree" result
 	object to an "hclust" tree. 
 
+	* hclust: add reorder() and rev() methods for standard "hclust"
+	trees of R.  I have no clue why base R does not have these
+	methods, but I provide them now in vegan. An additional reason for
+	providing these methods is that reorder(<dendrogram-object>, wts,
+	agglo.FUN = mean) will use unweighted mean of merged groups even
+	when these are of very unequal sizes. The reorder method provided
+	here will use group sizes as weights and the value of the group
+	will be the mean of its leaves (terminal nodes).
+
 	* biplot.rda: failed in axis scaling with negative 'scaling'
 	values when some species had zero variance (and hence species
 	scores was 0/0 = NaN).
